# atomic_enum

./: Cargo.toml
src/: lib.rs
tests/: cfg.rs  nostd.rs  repr.rs  with_display.rs
