[package]
    authors     = ["Markus @ DasBossGit", "Thomas Bächler <thomas.baechler@gmx.de>"]
    categories  = ["concurrency"]
    description = "An attribute to create an atomic wrapper around a C-style enum"
    edition     = "2024"
    keywords    = ["atomic", "enum"]
    name        = "atomic_enum"
    version     = "0.3.0"

[lib]
    proc-macro = true

[features]
    cas     = []      # enables compare-and-swap operations on atomics
    default = ["cas"]

[dependencies]
    proc-macro2 = "1"
    quote       = "1"
    simsearch   = "0.3"
    syn         = { version = "2", features = ["full"] }
